<resources>
    <string name="app_name">Better Colloscope</string>
    <string name="date">Date et heure</string>
    <string name="salle">Salle</string>
    <string name="matiere">Matière</string>
    <string name="prof">Prof</string>
    <string name="note">Note</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="password">Mot de passe</string>
    <string name="connection">Se connecter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
</resources>