<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_marginTop="15sp">
    <TableLayout
            android:id="@+id/main_table"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="15"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp">

        <TextView
                android:id="@+id/txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Semaine 15 (22/01-27/01)"
                android:textSize="20sp"
                android:textStyle="bold">

        </TextView>


        <TableRow
                android:background="#51B435"
                android:padding="10dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/date" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/salle" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/matiere" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/prof" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/note" />
        </TableRow>

        <TableRow
                android:background="#F0F7F7"
                android:padding="5dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="25/01 à 12h"
                    android:textColor="@color/black" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="T1"
                    android:textColor="@color/black" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Physique"
                    android:textColor="@color/black" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="M. Borel"
                    android:textColor="@color/black" />

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="@string/note"
                    android:textColor="@color/black"
                    android:maxLength="2"
                    android:inputType="numberDecimal"
                    tools:ignore="LabelFor" />
        </TableRow>
    </TableLayout>

    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="75"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp">

        <TextView
                android:id="@+id/txt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Semaine 16 (22/01-27/01)"
                android:textSize="20sp"
                android:textStyle="bold" />


        <TableRow
                android:background="#51B435"
                android:padding="10dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/date" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/salle" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/matiere" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/prof" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/note" />
        </TableRow>

        <TableRow
                android:background="#F0F7F7"
                android:padding="5dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="25/01 à 12h"
                    android:textColor="@color/black" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="T1"
                    android:textColor="@color/black" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Physique"
                    android:textColor="@color/black" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="M. Borel"
                    android:textColor="@color/black" />

           <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="@string/note"
                    android:textColor="@color/black"
                    android:maxLength="2"
                    android:inputType="numberDecimal"
                    tools:ignore="LabelFor" />
        </TableRow>

        <TextView
                android:id="@+id/reponse_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TEST TEXT"
                android:textColor="@color/white" />
    </TableLayout>


</LinearLayout>